--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zooid-error-state",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "ErrorState",
   "main": "dist/bundle.js",
   "scripts": {
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "react": "^15.0.1"
+    "react": "^15.0.1",
+    "zooid-button": "^1.1.3"
   }
 }
